--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-sample-plugin",
-  "version": "0.12.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "name": "graph-analysis",
+  "version": "0.0.1",
+  "description": "Analyse your Obsidian graph",
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
@@ -14,6 +14,7 @@
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@types/graphlib": "^2.1.8",
     "@types/node": "^14.14.37",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
