--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/graphlib": "^2.1.8",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^14.14.37",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
@@ -22,6 +23,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "graphlib": "^2.1.8"
+    "graphlib": "^2.1.8",
+    "lodash.isequal": "^4.5.0"
   }
 }
