--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup --config rollup.config.js --environment BUILD:production"
   },
   "keywords": [],
-  "author": "",
+  "author": "SkepticMystic",
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
@@ -19,11 +19,16 @@
     "@types/node": "^14.14.37",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
+    "rollup-plugin-svelte": "7.1.0",
+    "svelte-check": "^1.1.14",
+    "svelte-preprocess": "^4.7.3",
     "tslib": "^2.2.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@tsconfig/svelte": "^2.0.1",
     "graphlib": "^2.1.8",
-    "lodash.isequal": "^4.5.0"
+    "lodash.isequal": "^4.5.0",
+    "svelte": "3.35.0"
   }
 }
