--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
+  "extends": "@tsconfig/svelte/tsconfig.json",
+
   "compilerOptions": {
     "baseUrl": ".",
-    "inlineSourceMap": true,
+    // "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
     "target": "es6",
@@ -9,14 +11,12 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "lib": [
-      "dom",
-      "es5",
-      "scripthost",
-      "es2015"
-    ]
+    "lib": ["dom", "es5", "scripthost", "es2015"],
+    "types": ["node", "svelte"],
+    "paths": {
+      "src": ["src/*"]
+    }
   },
-  "include": [
-    "**/*.ts"
-  ]
+  "include": ["src/**/*", "src/*", "**/*.ts"],
+  "exclude": ["node_modules/*"]
 }
