--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "main.js",
   "scripts": {
     "dev": "rollup --config rollup.config.js -w",
-    "build": "rollup --config rollup.config.js --environment BUILD:production"
+    "build": "rollup --config rollup.config.js --environment BUILD:production",
+    "release": "standard-version"
+  },
+  "standard-version": {
+    "t": ""
   },
   "keywords": [],
   "author": "SkepticMystic",
@@ -13,22 +17,23 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-typescript": "^8.2.1",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@types/graphlib": "^2.1.8",
     "@types/lodash.isequal": "^4.5.5",
-    "@types/node": "^14.14.37",
-    "obsidian": "^0.12.0",
-    "rollup": "^2.32.1",
+    "@types/node": "^14.17.20",
+    "obsidian": "^0.12.16",
+    "rollup": "^2.58.0",
     "rollup-plugin-svelte": "7.1.0",
-    "svelte-check": "^1.1.14",
-    "svelte-preprocess": "^4.7.3",
-    "tslib": "^2.2.0",
-    "typescript": "^4.3.5"
+    "svelte-check": "^1.6.0",
+    "svelte-preprocess": "^4.9.8",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "@tsconfig/svelte": "^2.0.1",
     "graphlib": "^2.1.8",
     "lodash.isequal": "^4.5.0",
+    "standard-version": "^9.3.1",
     "svelte": "3.35.0"
   }
 }
