--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@types/node": "^14.17.20",
     "obsidian": "^0.12.16",
     "rollup": "^2.58.0",
+    "rollup-plugin-ignore": "^1.0.10",
     "rollup-plugin-svelte": "7.1.0",
+    "sanitize-html": "^2.5.2",
+    "source-map-js": "^0.6.2",
     "svelte-check": "^1.6.0",
     "svelte-preprocess": "^4.9.8",
     "tslib": "^2.3.1",
