--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "graphlib": "^2.1.8",
     "lodash.isequal": "^4.5.0",
+    "obsidian-community-lib": "0.0.16",
     "sbd": "^1.0.19",
     "standard-version": "^9.3.1",
     "svelte": "3.35.0"
