--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "obsidian-community-lib": "1.1.0",
     "sbd": "^1.0.19",
     "standard-version": "^9.3.2",
-    "svelte": "3.35.0"
+    "svelte": "3.35.0",
+    "svelte-icons": "^2.1.0"
   }
 }
