refactor: :recycle: ResultsMapTable.svelte

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "coCites",
-        "commDetection"
+        "commDetection",
+        "similarity"
     ]
 }
