--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "coCites",
         "commDetection",
-        "similarity"
+        "similarity",
+        "labelProp"
     ]
 }
