--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sbd": "^1.0.19",
     "standard-version": "^9.3.2",
     "svelte": "3.35.0",
-    "svelte-icons": "^2.1.0"
+    "svelte-icons": "^2.1.0",
+    "svelte-infinite-scroll": "^2.0.0"
   }
 }
