--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-typescript": "^8.3.0",
-    "@types/graphlib": "^2.1.8",
     "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^14.17.32",
     "obsidian": "^0.12.17",
@@ -35,8 +34,8 @@
   },
   "dependencies": {
     "@tsconfig/svelte": "^2.0.1",
-    "graphlib": "^2.1.8",
     "graphology": "^0.23.1",
+    "graphology-communities-louvain": "^1.5.3",
     "lodash.isequal": "^4.5.0",
     "obsidian-community-lib": "1.2.0",
     "sbd": "^1.0.19",
