feat(HITS): :sparkles: HITS Algorithm!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "coCites",
         "commDetection",
         "similarity",
-        "labelProp"
+        "labelProp",
+        "HITS"
     ]
 }
